packages/swift/Sources/CVoicevoxCore/include/voicevox_core.h

typedef int32_t VoicevoxResultCode;
typedef int32_t VoicevoxUserDictWordType;
/**
 * 音声シンセサイザ。
 *
 * <b>構築</b>(_construction_)は ::voicevox_synthesizer_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_synthesizer_delete で行う。
 *
 * \orig-impl{VoicevoxSynthesizer}
 */
typedef struct VoicevoxSynthesizer VoicevoxSynthesizer;
/**
 * ユーザー辞書。
 *
 * \orig-impl{VoicevoxUserDict}
 */
typedef struct VoicevoxUserDict VoicevoxUserDict;
/**
 * 音声モデルID。
 *
 * ::VoicevoxSynthesizer はこのIDをキーとして、音声モデルのロード・アンロードを行う。
 *
 * 同じIDを持つ複数のVVMファイルがあるときは、ファイルとして新しい方を常に使うことが推奨される。[VOICEVOX/voicevox_vvm]で管理されているVVMでは、次の方針が取られている。
 *
 * - VVMに含まれる声が変化せず、軽微な修正のみのときはIDを使い回してリリースする。
 * - VVMに含まれる声が明確に変化するかもしくは削除されるような実質的な変更のときは、新しいIDを割り振ってリリースする。
 *
 * これ以外は未定であり、更なるルールについては[VOICEVOX/voicevox_vvm#19]で議論される予定。
 *
 * \orig-impl{VoicevoxVoiceModelId}
 *
 * [VOICEVOX/voicevox_vvm]: https://github.com/VOICEVOX/voicevox_vvm
 * [VOICEVOX/voicevox_vvm#19]: https://github.com/VOICEVOX/voicevox_vvm/issues/19
 */
typedef const uint8_t (*VoicevoxVoiceModelId)[16];
/**
 * スタイルID。
 *
 * VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
 *
 * \orig-impl{VoicevoxStyleId}
 */
typedef uint32_t VoicevoxStyleId;
/**
 * ユーザー辞書の単語。
 *
 * \orig-impl{VoicevoxUserDictWord}
 */
typedef struct VoicevoxUserDictWord {
  /**
   * 表記
   */
  const char *surface;
  /**
   * 読み
   */
  const char *pronunciation;
  /**
   * アクセント型
   */
  uintptr_t accent_type;
  /**
   * 単語の種類
   */
  VoicevoxUserDictWordType word_type;
  /**
   * 優先度
   */
  uint32_t priority;
} VoicevoxUserDictWord;
VoicevoxResultCode voicevox_synthesizer_create_sing_frame_volume(const struct VoicevoxSynthesizer *synthesizer,
                                                                 const char *score_json,
                                                                 const char *frame_audio_query_json,
                                                                 VoicevoxStyleId style_id,
                                                                 char **output_volume_json);
VoicevoxResultCode voicevox_synthesizer_frame_synthesis(const struct VoicevoxSynthesizer *synthesizer,
                                                        const char *frame_audio_query_json,
                                                        VoicevoxStyleId style_id,
                                                        uintptr_t *output_wav_length,
                                                        uint8_t **output_wav);
void voicevox_json_free(char *json);
void voicevox_wav_free(uint8_t *wav);
const char *voicevox_error_result_to_message(VoicevoxResultCode result_code);
struct VoicevoxUserDictWord voicevox_user_dict_word_make(const char *surface,
                                                         const char *pronunciation,
                                                         uintptr_t accent_type);
struct VoicevoxUserDict *voicevox_user_dict_new(void);
VoicevoxResultCode voicevox_user_dict_load(const struct VoicevoxUserDict *user_dict,
                                           const char *dict_path);
VoicevoxResultCode voicevox_user_dict_add_word(const struct VoicevoxUserDict *user_dict,
                                               const struct VoicevoxUserDictWord *word,
                                               uint8_t (*output_word_uuid)[16]);
VoicevoxResultCode voicevox_user_dict_update_word(const struct VoicevoxUserDict *user_dict,
                                                  const uint8_t (*word_uuid)[16],
                                                  const struct VoicevoxUserDictWord *word);
VoicevoxResultCode voicevox_user_dict_remove_word(const struct VoicevoxUserDict *user_dict,
                                                  const uint8_t (*word_uuid)[16]);
VoicevoxResultCode voicevox_user_dict_to_json(const struct VoicevoxUserDict *user_dict,
                                              char **output_json);
VoicevoxResultCode voicevox_user_dict_import(const struct VoicevoxUserDict *user_dict,
                                             const struct VoicevoxUserDict *other_dict);
VoicevoxResultCode voicevox_user_dict_save(const struct VoicevoxUserDict *user_dict,
                                           const char *path);
void voicevox_user_dict_delete(struct VoicevoxUserDict *user_dict);