packages/flutter/lib/src/bindings.g.dart


  int voicevox_synthesizer_create_sing_frame_volume(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> score_json,
    ffi.Pointer<ffi.Char> frame_audio_query_json,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_volume_json,
  ) {
    return _voicevox_synthesizer_create_sing_frame_volume(
      synthesizer,
      score_json,
      frame_audio_query_json,
      style_id,
      output_volume_json,
    );
  }

  late final _voicevox_synthesizer_create_sing_frame_volumePtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_create_sing_frame_volume');
  late final _voicevox_synthesizer_create_sing_frame_volume =
      _voicevox_synthesizer_create_sing_frame_volumePtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_frame_synthesis(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> frame_audio_query_json,
    int style_id,
    ffi.Pointer<ffi.UintPtr> output_wav_length,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_wav,
  ) {
    return _voicevox_synthesizer_frame_synthesis(
      synthesizer,
      frame_audio_query_json,
      style_id,
      output_wav_length,
      output_wav,
    );
  }

  late final _voicevox_synthesizer_frame_synthesisPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.UintPtr>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_synthesizer_frame_synthesis');
  late final _voicevox_synthesizer_frame_synthesis =
      _voicevox_synthesizer_frame_synthesisPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  void voicevox_json_free(
    ffi.Pointer<ffi.Char> json,
  ) {
    return _voicevox_json_free(
      json,
    );
  }

  late final _voicevox_json_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'voicevox_json_free');
  late final _voicevox_json_free =
      _voicevox_json_freePtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void voicevox_wav_free(
    ffi.Pointer<ffi.Uint8> wav,
  ) {
    return _voicevox_wav_free(
      wav,
    );
  }

  late final _voicevox_wav_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
          'voicevox_wav_free');
  late final _voicevox_wav_free =
      _voicevox_wav_freePtr.asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  ffi.Pointer<ffi.Char> voicevox_error_result_to_message(
    int result_code,
  ) {
    return _voicevox_error_result_to_message(
      result_code,
    );
  }

  late final _voicevox_error_result_to_messagePtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(VoicevoxResultCode1)>>(
      'voicevox_error_result_to_message');
  late final _voicevox_error_result_to_message =
      _voicevox_error_result_to_messagePtr
          .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  VoicevoxUserDictWord voicevox_user_dict_word_make(
    ffi.Pointer<ffi.Char> surface,
    ffi.Pointer<ffi.Char> pronunciation,
    int accent_type,
  ) {
    return _voicevox_user_dict_word_make(
      surface,
      pronunciation,
      accent_type,
    );
  }

  late final _voicevox_user_dict_word_makePtr = _lookup<
      ffi.NativeFunction<
          VoicevoxUserDictWord Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.UintPtr)>>('voicevox_user_dict_word_make');
  late final _voicevox_user_dict_word_make =
      _voicevox_user_dict_word_makePtr.asFunction<
          VoicevoxUserDictWord Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<VoicevoxUserDict> voicevox_user_dict_new() {
    return _voicevox_user_dict_new();
  }

  late final _voicevox_user_dict_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<VoicevoxUserDict> Function()>>(
          'voicevox_user_dict_new');
  late final _voicevox_user_dict_new = _voicevox_user_dict_newPtr
      .asFunction<ffi.Pointer<VoicevoxUserDict> Function()>();

  int voicevox_user_dict_load(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Char> dict_path,
  ) {
    return _voicevox_user_dict_load(
      user_dict,
      dict_path,
    );
  }

  late final _voicevox_user_dict_loadPtr = _lookup<
      ffi.NativeFunction<
          VoicevoxResultCode1 Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Char>)>>('voicevox_user_dict_load');
  late final _voicevox_user_dict_load = _voicevox_user_dict_loadPtr.asFunction<
      int Function(ffi.Pointer<VoicevoxUserDict>, ffi.Pointer<ffi.Char>)>();

  int voicevox_user_dict_add_word(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<VoicevoxUserDictWord> word,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_word_uuid,
  ) {
    return _voicevox_user_dict_add_word(
      user_dict,
      word,
      output_word_uuid,
    );
  }

  late final _voicevox_user_dict_add_wordPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<VoicevoxUserDictWord>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_user_dict_add_word');
  late final _voicevox_user_dict_add_word =
      _voicevox_user_dict_add_wordPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<VoicevoxUserDictWord>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  int voicevox_user_dict_update_word(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> word_uuid,
    ffi.Pointer<VoicevoxUserDictWord> word,
  ) {
    return _voicevox_user_dict_update_word(
      user_dict,
      word_uuid,
      word,
    );
  }

  late final _voicevox_user_dict_update_wordPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
                  ffi.Pointer<VoicevoxUserDictWord>)>>(
      'voicevox_user_dict_update_word');
  late final _voicevox_user_dict_update_word =
      _voicevox_user_dict_update_wordPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<VoicevoxUserDictWord>)>();

  int voicevox_user_dict_remove_word(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> word_uuid,
  ) {
    return _voicevox_user_dict_remove_word(
      user_dict,
      word_uuid,
    );
  }

  late final _voicevox_user_dict_remove_wordPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_user_dict_remove_word');
  late final _voicevox_user_dict_remove_word =
      _voicevox_user_dict_remove_wordPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  int voicevox_user_dict_to_json(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_json,
  ) {
    return _voicevox_user_dict_to_json(
      user_dict,
      output_json,
    );
  }

  late final _voicevox_user_dict_to_jsonPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_user_dict_to_json');
  late final _voicevox_user_dict_to_json =
      _voicevox_user_dict_to_jsonPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_user_dict_import(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<VoicevoxUserDict> other_dict,
  ) {
    return _voicevox_user_dict_import(
      user_dict,
      other_dict,
    );
  }

  late final _voicevox_user_dict_importPtr = _lookup<
      ffi.NativeFunction<
          VoicevoxResultCode1 Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<VoicevoxUserDict>)>>('voicevox_user_dict_import');
  late final _voicevox_user_dict_import =
      _voicevox_user_dict_importPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxUserDict>, ffi.Pointer<VoicevoxUserDict>)>();

  int voicevox_user_dict_save(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _voicevox_user_dict_save(
      user_dict,
      path,
    );
  }

  late final _voicevox_user_dict_savePtr = _lookup<
      ffi.NativeFunction<
          VoicevoxResultCode1 Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Char>)>>('voicevox_user_dict_save');
  late final _voicevox_user_dict_save = _voicevox_user_dict_savePtr.asFunction<
      int Function(ffi.Pointer<VoicevoxUserDict>, ffi.Pointer<ffi.Char>)>();

  void voicevox_user_dict_delete(
    ffi.Pointer<VoicevoxUserDict> user_dict,
  ) {
    return _voicevox_user_dict_delete(
      user_dict,
    );
  }

  late final _voicevox_user_dict_deletePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VoicevoxUserDict>)>>(
      'voicevox_user_dict_delete');
  late final _voicevox_user_dict_delete = _voicevox_user_dict_deletePtr
      .asFunction<void Function(ffi.Pointer<VoicevoxUserDict>)>();
}

/// 7.18.1.2 Minimum-width integer types
typedef int_least8_t = ffi.Int8;
typedef Dartint_least8_t = int;
typedef int_least16_t = ffi.Int16;
typedef Dartint_least16_t = int;
typedef int_least32_t = ffi.Int32;
typedef Dartint_least32_t = int;
typedef int_least64_t = ffi.Int64;
typedef Dartint_least64_t = int;
typedef uint_least8_t = ffi.Uint8;
typedef Dartuint_least8_t = int;
typedef uint_least16_t = ffi.Uint16;
typedef Dartuint_least16_t = int;
typedef uint_least32_t = ffi.Uint32;
typedef Dartuint_least32_t = int;
typedef uint_least64_t = ffi.Uint64;
typedef Dartuint_least64_t = int;
